update swagger and param send email
